[package]
name = "xcb-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.12", features = ["derive"] }
image = "0.24.6"
xcb = {git="https://github.com/rust-x-bindings/rust-xcb.git"}
